# countdown-by-rust

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  README.md  input.css  tailwind.config.js
assets/: og-image.png.br  tailwind.css.br
src/: main.rs
src/components/: countdown.rs  input.rs  mod.rs  settings.rs
