[package]
name = "cmdb"
version = "0.1.0"
authors = ["zhuima"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }
chrono = { version = "0.4", features = ["wasmbind"] }
tokio = { version = "1.0", features = ["rt", "macros", "time"] }
js-sys = "0.3"
log = "0.4.22"
gloo-timers =  "0.3"
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = "0.2"


# Debug
dioxus-logger = "0.5.1"
manganis = "0.2.2"
wasm-bindgen-futures = "0.4"
